--- a/client/src/index.css
+++ b/client/src/index.css
@@ -449,6 +449,30 @@ section::after {
   height: 0.375rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
